// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default renders correctly 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  max-width: 32px;
  height: 32px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
}

.c1 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ACB6D8;
  box-sizing: border-box;
  border-radius: 8px;
  margin-bottom: 24px;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  color: #112035;
}

.c0 span {
  margin: 0 16px 0 0;
}

<div>
  <div
    class="c0"
    type="info"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
        color="blue7"
        rotate="0"
        size="32"
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 24 25"
          width="100%"
        >
          <path
            clip-rule="evenodd"
            d="M12 .5C5.383.5 0 5.883 0 12.5s5.383 12 12 12 12-5.383 12-12-5.383-12-12-12zm-1 6.99a1 1 0 112 0c0 .553-.447 1.005-1 1.005-.553 0-1-.442-1-.995v-.01zm0 4.01a1 1 0 112 0v7a1 1 0 11-2 0v-7zm-9 1c0 5.514 4.486 10 10 10s10-4.486 10-10-4.486-10-10-10-10 4.486-10 10z"
            fill="#112035"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    This is an infomation message for the customer!
  </div>
</div>
`;

exports[`info renders correctly 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  max-width: 32px;
  height: 32px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
}

.c1 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ACB6D8;
  box-sizing: border-box;
  border-radius: 8px;
  margin-bottom: 24px;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  color: #112035;
}

.c0 span {
  margin: 0 16px 0 0;
}

<div>
  <div
    class="c0"
    type="info"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
        color="blue7"
        rotate="0"
        size="32"
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 24 25"
          width="100%"
        >
          <path
            clip-rule="evenodd"
            d="M12 .5C5.383.5 0 5.883 0 12.5s5.383 12 12 12 12-5.383 12-12-5.383-12-12-12zm-1 6.99a1 1 0 112 0c0 .553-.447 1.005-1 1.005-.553 0-1-.442-1-.995v-.01zm0 4.01a1 1 0 112 0v7a1 1 0 11-2 0v-7zm-9 1c0 5.514 4.486 10 10 10s10-4.486 10-10-4.486-10-10-10-10 4.486-10 10z"
            fill="#112035"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    This is a infomational message for the customer!
  </div>
</div>
`;

exports[`warning renders correctly 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  max-width: 32px;
  height: 32px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
}

.c1 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFDCDC;
  box-sizing: border-box;
  border-radius: 8px;
  margin-bottom: 24px;
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  color: #AB1D20;
}

.c0 span {
  margin: 0 16px 0 0;
}

<div>
  <div
    class="c0"
    type="warning"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
        color="pink8"
        rotate="0"
        size="32"
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 26 25"
          width="100%"
        >
          <path
            d="M13 6.5a1 1 0 00-1 1v6a1 1 0 102 0v-6a1 1 0 00-1-1zm0 10.005a1.003 1.003 0 000 2.005 1 1 0 001-1v-.01a.995.995 0 00-1-.995zm11.42-.503L16.78 2.686A4.31 4.31 0 0013 .5a4.31 4.31 0 00-3.78 2.186L1.58 16.002a4.288 4.288 0 00.009 4.327A4.313 4.313 0 005.36 22.5h15.28a4.313 4.313 0 003.771-2.171 4.288 4.288 0 00.009-4.327zm-1.739 3.324A2.333 2.333 0 0120.64 20.5H5.36a2.331 2.331 0 01-2.041-1.174 2.306 2.306 0 01-.005-2.328l7.64-13.316A2.332 2.332 0 0113 2.5c.856 0 1.621.441 2.046 1.182l7.64 13.316c.418.73.417 1.6-.005 2.328z"
            fill="#AB1D20"
          />
        </svg>
      </span>
    </div>
    This is a warning message for the customer!
  </div>
</div>
`;
